--- a/style.css
+++ b/style.css
@@ -71,13 +71,13 @@ body {
     background-color: rgb(145, 145, 145);
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+    width: 500px;
 }
 
 .cell {
     cursor: pointer;
     background-color: #fff;
-    border: 1px solid #252525;
+    outline: 1px solid #252525;
     display: flex;
     align-items: center;
     justify-content: center;
