--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ select:focus {
 }
 
 .face {
-    background-image: url('./assets/Doom_Normal.png');
+    background-image: url('./assets/DoomNormal.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
